# prior

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
src/prior/: __init__.py  cli.py
src/prior/core/: __init__.py  agent.py  chat_service.py  filetree.py
src/prior/tui/: __init__.py  app.py
src/prior/tui/screens/: chat.py
src/prior/tui/widgets/: __init__.py  clipboard_input.py  mouse_passthrough.py
tests/: __init__.py
tests/integration/: test_app.py  test_chat_screen.py  test_cli.py
tests/unit/: test_agent.py  test_clipboard_input.py  test_filetree.py
