[project]
name = "prior"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sangwon", email = "lsw91.main@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "agent",
    "python-dotenv>=1.0.0",
    "tui",
]

[project.scripts]
prior = "prior.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
# Test discovery patterns - pytest will search these directories
testpaths = [
    "tests",
    "packages/agent/tests",
    "packages/tui/tests",
    "packages/tools/tests",
    "packages/workflow/tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Add all package src directories to Python path so imports work
pythonpath = [
    ".",
    "src",
    "packages/agent/src",
    "packages/tui/src",
    "packages/tools/src",
    "packages/workflow/src",
]
# Async test support
asyncio_mode = "auto"
# Coverage settings (optional)
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.uv.workspace]
members = [
    "packages/tui",
    "packages/agent",
    "packages/tools",
    "packages/workflow",
]

[tool.uv.sources]
tui = { workspace = true }
agent = { workspace = true }
tools = { workspace = true }
workflow = { workspace = true }
